--- a/_posts/2023-01-28-first.md
+++ b/_posts/2023-01-28-first.md
@@ -8,4 +8,4 @@ title:  "첫 포스팅 입니다."
 
 앞으로 열심히 해보겠습니다.
 
-![스크린샷 2023-01-28 오후 7.31.42](../images/2023-01-28-first/스크린샷 2023-01-28 오후 7.31.42.png)
+![mountain](../images/2023-01-28-first/mountain.png)
