--- a/_posts/2023-01-28-first.md
+++ b/_posts/2023-01-28-first.md
@@ -4,8 +4,10 @@ title:  "첫 포스팅 입니다."
 ---
 
 
-# 오늘 처음 블로그를 만들었어요
+#            오늘 처음 블로그를 만들었어요
 
-앞으로 열심히 해보겠습니다.
+​                 앞으로 열심히 해보겠습니다.
 
 ![mountain]({{site.url}}/images/mountain.png)
+
+  
