--- a/_posts/2023-01-28-first.md
+++ b/_posts/2023-01-28-first.md
@@ -1,6 +1,12 @@
 ---
-layout: post
+layout: single
 title:  "첫 포스팅 입니다."
+categories: blog
+tag: [jekyll, blog, github]
+toc: true
+author_profile: false
+sidebar:
+    nav: "counts"     
 ---
 
 
