fourth changes post

--- a/_posts/2023-01-31-fourth.md
+++ b/_posts/2023-01-31-fourth.md
@@ -2,6 +2,7 @@
 
 
 
+```swift
 1.키워드(Keyword)
 
 - 약속어 ( 스위프트에서 특별한 의미로 사용하겠다고 미리 정해놓은 단어)
@@ -37,7 +38,6 @@ var name2 = "임꺽정"    -> name2 : 식별자
 4. 토근 (Token)
 
 - 코드의 가장 작은 단위 : 코드에서 더이상 쪼갤수 없는 최소의 단위
-  
 
 식별자.키워드,구두점,연산자,리터럴
 
@@ -66,3 +66,9 @@ n < 5     //표현식
 var a = 5  // 문장
 
 print(a)   // 문장
+```
+
+
+
+
+
