second post-tag

--- a/_posts/2023-01-30-second.md
+++ b/_posts/2023-01-30-second.md
@@ -1,3 +1,20 @@
+
+
+
+
+---
+
+layout: single
+title:  "첫 포스팅 입니다."
+categories: blog
+tag: [jekyll, blog, github]
+toc: true
+author_profile: false
+sidebar:
+    nav: "counts"
+
+---
+
 # 변수와 상수
 
 ```swift
