--- a/_posts/2023-01-31-fifth.md
+++ b/_posts/2023-01-31-fifth.md
@@ -1,3 +1,19 @@
+
+---
+layout: single
+title:  "swift 연산."
+categories: blog
+tag: [jekyll, blog, github]
+toc: true
+author_profile: false
+sidebar:
+    nav: "counts"     
+---
+
+
+
+
+
 ## swift 연산
 
 ★ 같은 타입끼리만 연산 및 저장 가능
