--- a/_posts/2023-01-31-fourth.md
+++ b/_posts/2023-01-31-fourth.md
@@ -1,3 +1,15 @@
+---
+layout: single
+title:  "프로그래밍 관련 용어."
+categories: blog
+tag: [jekyll, blog, github]
+toc: true
+author_profile: false
+sidebar:
+    nav: "counts"     
+---
+
+
 # 프로그래밍 관련 용어
 
 
