--- a/_posts/2023-01-31-third.md
+++ b/_posts/2023-01-31-third.md
@@ -1,3 +1,15 @@
+---
+layout: single
+title:  "데이터 타입."
+categories: blog
+tag: [jekyll, blog, github]
+toc: true
+author_profile: false
+sidebar:
+    nav: "counts"     
+---
+
+
 # 데이터 타입
 
 ```swift
