title changes and category

--- a/_posts/2023-01-30-second.md
+++ b/_posts/2023-01-30-second.md
@@ -1,7 +1,7 @@
 ---
 layout: single
-title:  "변수와 상수."
-categories: blog
+title:  "변수와 상수"
+categories: grammer
 tag: [jekyll, blog, github]
 toc: true
 author_profile: false
