--- a/_posts/2023-01-31-fifth.md
+++ b/_posts/2023-01-31-fifth.md
@@ -1,7 +1,6 @@
-
 ---
 layout: single
-title:  "swift 연산."
+title:  "swift 연산"
 categories: blog
 tag: [jekyll, blog, github]
 toc: true
@@ -9,6 +8,7 @@ author_profile: false
 sidebar:
     nav: "counts"     
 ---
+
 
 
 
