--- a/_posts/2023-01-31-sixith.md
+++ b/_posts/2023-01-31-sixith.md
@@ -1,3 +1,20 @@
+---
+layout: single
+title:  "조건문(If문,Switch문)"
+categories: blog
+tag: [jekyll, blog, github]
+toc: true
+author_profile: false
+sidebar:
+    nav: "counts"     
+---
+
+
+
+
+
+
+
 # 조건문
 
 if/else 문  switch 문
