--- a/_posts/2023-01-31-sixith.md
+++ b/_posts/2023-01-31-sixith.md
@@ -1,7 +1,7 @@
 ---
 layout: single
 title:  "조건문(If문,Switch문)"
-categories: blog
+categories: grammer
 tag: [jekyll, blog, github]
 toc: true
 author_profile: false
