--- a/_posts/2023-01-31-third.md
+++ b/_posts/2023-01-31-third.md
@@ -1,7 +1,7 @@
 ---
 layout: single
 title:  "데이터 타입"
-categories: blog
+categories: grammer
 tag: [jekyll, blog, github]
 toc: true
 author_profile: false
