--- a/_posts/2023-01-31-fifth.md
+++ b/_posts/2023-01-31-fifth.md
@@ -1,7 +1,7 @@
 ---
 layout: single
 title:  "swift 연산"
-categories: blog
+categories: grammer
 tag: [jekyll, blog, github]
 toc: true
 author_profile: false
