--- a/_posts/2023-02-01-eighth.md
+++ b/_posts/2023-02-01-eighth.md
@@ -1,3 +1,17 @@
+---
+layout: single
+title:  "반복문"
+categories: grammer
+tag: [jekyll, blog, github]
+toc: true
+author_profile: false
+sidebar:
+    nav: "counts"     
+---
+
+
+
+
 # 반복문
 
 -for 문,while 문,repeat while 문
